<resources>
    <string name="app_name">Peekaboo</string>
    <string name="pleaseWait">Please, wait...</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="signIn">Sign In</string>
    <string name="skip">Skip</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="email_or_phone">Email or phone number</string>
    <string name="invalidPhoneNumber">Invalid phone number</string>
    <string name="invalidLogin">Invalid login</string>
    <string name="invalidUsername">Invalid username</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="invalidPasswordConfirm">Passwords don\'t match</string>
    <string name="invalidEmail">Invalid email or phone number</string>
    <string name="invalidKey">Invalid key</string>
    <string name="bySignUp1">By </string>
    <string name="bySignUp2"> Sign Up </string>
    <string name="bySignUp3"> you agree to the </string>
    <string name="bySignUp4"> Terms of Use </string>
    <string name="orSignIn">Or Sign In with</string>
    <string name="existence_font">fonts/existence.otf</string>
    <string name="comfortaa_bold_font">fonts/comfortaa_bold.ttf</string>
    <string name="roboto_font">fonts/roboto.ttf</string>
    <string name="helvetica_font">fonts/helvetika.ttf</string>
    <string name="usernameOrLogin">Username or Login</string>
    <string name="emailOrPhoneNum">Email</string>
    <integer name="com_vk_sdk_AppId">5527207</integer>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close snavigation drawer</string>
    <string name="errorCheckNetwork">Please, check network connection</string>
    <string-array name="attacment_list">
        <item>Photo</item>
        <item>Pic from gallery</item>
        <item>Audio</item>
        <item>Document</item>
        <item>TEST: Voice record</item>
    </string-array>

    <string-array name="edit_chat_item">
        <item>Copy</item>
        <item>Delete</item>
        <item>Reply</item>
        <item>Forward</item>
        <item>TEST: To speech</item>
    </string-array>

    <string-array name="avatar_change_dialog">
        <item>Photo</item>
        <item>Pick from gallery</item>
    </string-array>
    <string-array name="dialog_tab_names">
        <item>Chat</item>
        <item>Sms</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder payload -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectImage">Select Image</string>
    <string name="ok">OK</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="dialogs">Dialogs</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="forgot">Forgot</string>
    <string name="forgot_password"> Password?</string>

    <string name="sign_up">Sign Up</string>
    <string name="hintConfirmationCode">Confirmation code</string>
    <string name="raccoon_doe">Raccoon Doe</string>

    <!-- ContactsFragment strings -->
    <string name="title_contacts">Contacts</string>

    <!-- PeekabooDialogsFragment strings -->
    <string name="title_dialogs">Dialogs</string>

    <!-- message types -->
    <string name="message_type_audio">Audio</string>
    <string name="message_type_image">Image</string>
    <string name="message_type_video">Video</string>
    <string name="message_type_document">Document</string>
    <string name="newMessages">new messages</string>
    <string name="newMessage">new message</string>
    <string name="sms_integrate">Integrate sms</string>
    <string name="prefer_text">Preferred text to speech voice</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="default_cloud_storage">Default cloud storage</string>
    <string name="google_cloud">Google Cloud Storage</string>
    <string name="services_integration">Services integration</string>
    <string name="logIn_to_Twitter">LogIn to Twitter</string>
    <string name="advanced">Advanced</string>
    <string name="social_network">Social network integration</string>
    <string name="nickname">Nickname</string>
    <string name="general">General</string>
    <string name="galleryIsNotAvailable">Gallery is not available</string>
    <string name="cameraIsNotAvailable">Camera is not available</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="selectFile">Select File</string>
    <string name="search_toolbar_hint">Search contact</string>
    <string name="save">Save</string>

</resources>
