<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/background"
    style="@style/AppTheme"
    android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/username"
            android:textColorHint="@color/textColorHint"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/colorAccent2"
            android:textColorLink="@color/colorAccent2"
            android:shadowColor="@color/colorAccent2"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"
             >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:textColorHint="@color/textColorHint"
            android:textColor="@color/textColor"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:password="true"
            android:textColorHint="@color/textColorHint"
            android:textColor="@color/textColor"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/confirmPassword"
            android:password="true"
            android:textColorHint="@color/textColorHint"
            android:textColor="@color/textColor"
            />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/bSignIn"
        android:text="@string/createAccount"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:background="@color/colorAccent"/>

</LinearLayout>